2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm (check_iri_reference): Requires
	|Message::DOM::DOMImplementation|.

2008-08-29  Wakaba  <wakaba@suika.fam.cx>

	* IMTChecker.pm: Updated for the new error reporting architecture.

	* ContentChecker.pm: Error levels for IMTs are added.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* H2H.pm (_shift_token): Support for unquoted HTML attribute
	values.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm: Support for new style of error
	reports.

	* HTML.pm.src: Set line=1, column=1 to the document node.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm, RDFXML.pm: Pass {level} object to language tag
	and URL checkers.  Support for more error levels for bogus
	langauge tag and URL "standards".

	* LangTag.pm, URIChecker.pm: Support for new style error
	level reporting.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for RDF/XML error levels.

	* HTMLTable.pm, RDFXML.pm: Support for new style of error level
	specifying.  Error types are revised.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: All error reporting method calls are 
	renewed.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: All error type names and "text" parameters
	are revised.  Use new style for "level" specification.

	* mkhtmlparser.pl: Use new style for "level" specification.

2008-08-03  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm (parse_char_string): Simplified error
	reporting process for broken ignored valuetype definition.
	(Valuetype idl_text): Support for special "DOMString" name.

2008-08-03  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm ($get_scoped_name): Append "::::" if the last
	terminal of the ScopedName is "DOMString", such that whether
	the last part of the scoped name is "DOMString" or "_DOMString"
	later.  It is necessary to determine whether a |typedef|
	definition should be ignored or not.
	(parse_char_string): Unescape the identifier of