@@ -1,5 +1,9 @@
 2008-08-30  Wakaba  <wakaba@suika.fam.cx>
 
+	* URIChecker.t: Error results updated.
+
+2008-08-30  Wakaba  <wakaba@suika.fam.cx>
+
 	* URIChecker.t: Test results updated to new error type names. 
 
 2008-08-03  Wakaba  <wakaba@suika.fam.cx>
